--- a/Readiculous.WebApp/wwwroot/css/global.css
+++ b/Readiculous.WebApp/wwwroot/css/global.css
@@ -17,9 +17,9 @@
     --color-header: #B089A5;
     --color-btn: #EDAEC0;
     --color-modal: #F8ECE9;
-    /*--color-background: linear-gradient(150deg, var(--color-text) 0%, #4A3542 35%, var(--color-secondary) 75%, var(--color-text) 100%);*/
     --color-background: #E1DACD;
-    /* --color-background: #F2EFF1;*/
+
+    --color-background-gradient: linear-gradient(135deg, rgba(250, 238, 230, 0.95), rgba(229, 191, 175, 0.95));
     --color-accent: #D4A5A5;
     --color-secondary: #8B5E83;
     --color-border: #C9A8B8;
